--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "npm run build && mocha --compilers ls:livescript",
     "clean": "rm -rf dist/*",
     "build": "lsc -co lib src",
-    "prepublish": "npm run clean && npm run test"
+
+    "test": "mocha --compilers ls:livescript",
+    "watch": "mocha --watch -R min --compilers ls:livescript",
+
+    "prepublish": "npm run prepublish:clean -s && npm run prepublish:build -s && npm run prepublish:test -s",
+    "prepublish:clean": "chalk -t '{red ..} {cyan.bold Cleaning}'  && npm run clean -s",
+    "prepublish:build": "chalk -t '{red ..} {cyan.bold Building}'  && npm run build -s",
+    "prepublish:test": "chalk -t '{red ..} {cyan.bold Testing}' && mocha -R progress --compilers ls:livescript"
   },
   "repository": {
     "type": "git",
@@ -31,6 +37,7 @@
     "bluebird": "^3.4.7",
     "chai": "^3.5.0",
     "chai-sinon": "^2.8.1",
+    "chalk-cli": "^3.0.0",
     "hexo": "^3.2.2",
     "livescript": "^1.5.0",
     "mocha": "^3.2.0",
